# elder-guardian-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.images.yml  docker-compose.rk3588.yml  docker-compose.yml  environment.yml  package.json  pnpm-lock.yaml  update_latest.sh
Background_MQTT/: README.md  SCENARIO_DATA_NOTES.md  backend.py  generate_scenario_data.py
apps/guardian-core/: Dockerfile  pyproject.toml
apps/guardian-core/app/: __init__.py  config.py  main.py
apps/guardian-core/app/action/: action_executor.py  action_planner.py  device_policy.py  escalation_policy.py
apps/guardian-core/app/agent/: context_builder.py  guardrails.py  llm_client.py  output_parser.py  prompt_templates.py  queue.py  runtime.py
apps/guardian-core/app/api/: agent_api.py  dashboard_api.py  event_api.py  hmi_api.py  home_api.py  sensor_api.py  wechat_api.py
apps/guardian-core/app/db/: crud.py  database.py  models.py
apps/guardian-core/app/events/: event_bus.py  event_router.py  state_machine.py
apps/guardian-core/app/gateways/: hmi_gateway.py  mqtt_gateway.py  websocket_gateway.py  wechat_gateway.py
apps/guardian-core/app/rule_engine/: env_rules.py  home_control_rules.py  risk_fusion.py  vision_rules.py  vital_rules.py
apps/guardian-core/app/services/: alert_service.py  hmi_service.py  home_service.py  report_service.py  sensor_service.py  vision_service.py
apps/vision-service/: pyproject.toml
apps/vision-service/app/: __init__.py  main.py
apps/wechat-adapter/: pyproject.toml
apps/wechat-adapter/app/: main.py
(+30 files in other folders)
