[project]
name = "guardian-core"
version = "0.1.0"
description = "FastAPI guardian core for the RK3588 elder guardian MVP."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7,<3",
  "sqlalchemy>=2.0",
  "paho-mqtt>=2.0",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "guardian-shared"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

