[project]
name = "vision-service"
version = "0.1.0"
description = "Mock vision event publisher for the elder guardian MVP."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "paho-mqtt>=2.0",
  "guardian-shared"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

