[project]
name = "wechat-adapter"
version = "0.1.0"
description = "Mock WeChat adapter for the elder guardian MVP."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

